# alecrim-fiap-tech-challenge-dois

./: .env_model  .gitignore  Dockerfile.scraping  README.md  docker-compose.yaml  main.py  pyproject.toml  run_scraper.sh
configs/: log_config.json
crons/: run_main_py
tech_challenge_dois/: aws_utils.py  data_transformation.py  scheduler.py  scraping.py  settings.py  utils.py
